waybar: fix wrong Font Awesome icon font

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -75,7 +75,7 @@
 #waybar {
   background: @bg;
   color: @light;
-  font-family: "Source Code Pro", "Font Awesome 5 Pro";
+  font-family: "Source Code Pro", "Font Awesome 6 Free", "Font Awesome 6 Brands";
   border-radius: 0;
   font-size: 12px;
   font-weight: bold;
